--- a/web/vistas-documentos/ver-formato-B.xhtml
+++ b/web/vistas-documentos/ver-formato-B.xhtml
@@ -13,10 +13,10 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Evaluador" outcome="index" />
-                        <p:menuitem value="Evaluador" outcome="index" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
-                        <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fases-trabajo-de-grado" />
+                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" />
+                        <p:menuitem value="3. Evaluación del Anteproyecto" />
                         <p:menuitem value="Ver Formato B" outcome="ver-formato-B" />
                     </p:breadCrumb>              
                 </h:form>
@@ -26,12 +26,10 @@
             </ui:define>
 
             <ui:define name="body">
+                #{menuController.setOutPerfiles(true)}
                 #{formatoB.buscarEvaluador(serviciosSimcaController.nombreUsuario)}
                 #{formatoB.prepararEdicion()}
-                <h:form>
-                    <p:menu model="#{menuView.model}" styleClass="menuizqroles" />                                        
-                </h:form>
-
+                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Formato B: Evaluación del Anteproyecto"/> <br/>
@@ -146,7 +144,8 @@
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                    <p:button value="Volver" outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>                                
+                                    <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>                                
+                                    <!--<p:button value="Volver" outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>-->                                
                                     <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px;" />
                                 </h:panelGrid>
                             </h:panelGrid>
