--- a/web/director/fases-trabajo-de-grado.xhtml
+++ b/web/director/fases-trabajo-de-grado.xhtml
@@ -12,10 +12,10 @@
 
             <ui:define name="menuprincipal">
                 <p:breadCrumb styleClass="migaDePan">
-                    <p:menuitem value="Director" outcome="vista-director" />
-                    <p:menuitem value="Director" outcome="vista-director" />
+                    <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
+                    <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
                     <p:menuitem value="Trabajos de Grado" 
-                                outcome="vista-director" />                        
+                                outcome="./../perfiles/vista-director.xhtml" />                        
                     <p:menuitem value="Fases del Trabajo de Grado" 
                                 outcome="fases-trabajo-de-grado" />
                     <p:menuitem value="1. Presentación de la Idea" 
@@ -29,16 +29,9 @@
             <ui:define name="body">          
 
                 #{trabajodegradoController.incializar()}
+                #{menuController.setOutPerfiles(true)}
                 
-                <h:form id="fases">                                                           
-
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Director" outcome="vista-director" style="background-color: #c2dfef" />
-                            <p:menuitem value="Jefe de Departamento" outcome="./../jefe-de-departamento/vista-jefe-de-departamento.xhtml" />
-                        </p:submenu>                                
-                    </p:menu>
-
+                <h:form id="fases">
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
                             #{trabajodegradoController.trabajo.trabajonombre}
@@ -75,12 +68,12 @@
                             </p:commandButton>-->
                             <h:panelGrid columns="5" cellpadding="5" cellspacing="5">
                                 <h:outputText value="Formato A:" style="font-weight: bold;" />
-                                <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoA}" style="width: 120px;" />          
+                                <p:button value="Diligenciar" icon="ui-icon-document" outcome="diligenciar-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoA}" style="width: 120px;" />          
                                 <p:button value="Editar" icon="ui-icon-pencil" href="editar-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnEditarFormatoA}" style="width: 120px;" />
-                                <p:button value="Ver" icon="ui-icon-comment" href="ver-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" />                                
+                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" />                                
                                 <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" actionListener="#{pDFBean.generarPDF()}" oncomplete="PF('dlgVerRutina').show();" />
                                 <h:outputText value="Revisión de la idea:" style="font-weight: bold;" />
-                                <p:button value="Ver" href="ver-formato-revision-idea.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" icon="ui-icon-comment" disabled="#{trabajodegradoController.btnVerRevisionFormatoA}" style="width: 120px;" />
+                                <p:button value="Ver" href="../vistas-documentos/ver-formato-revision-idea.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" icon="ui-icon-comment" disabled="#{trabajodegradoController.btnVerRevisionFormatoA}" style="width: 120px;" />
                                 <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" href="#" disabled="#{trabajodegradoController.btnVerRevisionFormatoA}" style="width: 120px;" />                                                                
                             </h:panelGrid>
 
