--- a/web/estudiante/diligenciar-anteproyecto.xhtml
+++ b/web/estudiante/diligenciar-anteproyecto.xhtml
@@ -13,9 +13,9 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
-                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="vista-estudiante" />
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />
                         <p:menuitem value="2. Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" />
                         <p:menuitem value="Diligenciar Anteproyecto" />
                     </p:breadCrumb>              
@@ -26,17 +26,11 @@
             </ui:define>
 
             <ui:define name="body">
+                #{menuController.setOutPerfiles(true)}
+                
                 #{estudianteViewController.nombresApellidos(serviciosSimcaController.nombreUsuario)}
                 #{trabajodegradoController.trabajoAsignado(estudianteViewController.entityTrabajo.trabajoid)}
                 #{trabajodegradoController.incializar()}                                
-                <h:form>
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Estudiante" outcome="vista-estudiante" style="background-color: #c2dfef" />                            
-                        </p:submenu>                                
-                    </p:menu>
-                </h:form>
-
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Diligenciar Anteproyecto"/> <br/>
