--- a/web/estudiante/editar-anteproyecto.xhtml
+++ b/web/estudiante/editar-anteproyecto.xhtml
@@ -26,9 +26,9 @@
                 </p:dialog>
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
-                        <p:menuitem value="Estudiante" outcome="vista-estudiante" />
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="vista-estudiante" />
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
+                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />
                         <p:menuitem value="2. Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" />
                         <p:menuitem value="Editar Anteproyecto" />
                     </p:breadCrumb>              
@@ -39,16 +39,8 @@
             </ui:define>
 
             <ui:define name="body">
-
-
-                <h:form>
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Estudiante" outcome="vista-estudiante" style="background-color: #c2dfef" />                            
-                        </p:submenu>                                
-                    </p:menu>
-                </h:form>
-
+                #{menuController.setOutPerfiles(true)}
+                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Editar Anteproyecto"/> <br/>
